Fixed frequency create edit issues, and some other fixes

--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -194,7 +194,7 @@
                                     <div class="form-group">
                                         <label>{{"Endson" | localize}}</label>
                                         <form class="input-arrow">
-                                            <input [(ngModel)]="checklist.endsOn" required="required" [disabled]="endOnIsEnabled == false"
+                                            <input [(ngModel)]="checklist.endsOn" required="required"
                                                 autocomplete="off" class="form-control" name="date" bsDatepicker
                                                 placeholder="Month" [minDate]="minDate"
                                                 [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
